--- a/style.css
+++ b/style.css
@@ -410,6 +410,7 @@ body, html {
         width: 100%;
         height: 800px;
         background-size: contain;
+        background-repeat: no-repeat;
         
         border-radius: 60px 60px 0px 0px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
